--- a/HTML_Renderer/org/lobobrowser/html/domimpl/package.html
+++ b/HTML_Renderer/org/lobobrowser/html/domimpl/package.html
@@ -1,1 +1,1 @@
-<body>Contains an implementation of the W3C HTML DOM Level 2 interfaces.</body>
+<body>Contains an implementation of the W3C HTML DOM</body>
