--- a/XAMJ_Build/lobo-docs/index.html
+++ b/XAMJ_Build/lobo-docs/index.html
@@ -1,16 +1,18 @@
 <html>
 <head>
-<title>Lobo Information and Documentation</title>
+<title>Lobo Evolution Information and Documentation</title>
 </head>
 <body>
-<h3>Lobo Information and Documentation</h3>
-<ul>
-<li><a href="http://lobobrowser.org/java-browser.jsp">Lobo Home Page</a>
-<li><a href="http://lobobrowser.org/browser/api-info.jsp">Lobo Browser API Information Page</a>
-<li><a href="platform-api/index.html">Lobo Browser API Docs</a> (Installed version)
-<li><a href="public-api/index.html">Clientlets and Extensions (Plugins) API Docs</a> (Installed version)
-<li><a href="http://lobobrowser.org/sourcecode.jsp">How to Obtain the Source Code</a>
-<li><a href="http://sourceforge.net/forum/forum.php?forum_id=467020">Help Forum</a> (Searchable)
-</ul>
+	<h3>Lobo Evolution Information and Documentation</h3>
+	<ul>
+		<li><a href="http://sourceforge.net/projects/loboevolution/">Lobo
+				Evolution Home Page</a></li>
+		<li><a href="http://oswetto.github.io/Loboevolution">Lobo
+				Evolution API Docs</a></li>
+		<li><a href="https://github.com/oswetto/Loboevolution">Lobo
+				Evolution Source Code</a></li>
+		<li><a href="https://github.com/oswetto/Loboevolution/issues">Lobo
+				Evolution issues</a></li>
+	</ul>
 </body>
 </html>
