--- a/Testing/html_testing/margin1.html
+++ b/Testing/html_testing/margin1.html
@@ -3,7 +3,7 @@
 <blockquote id="p2">blockquote</blockquote>
 <p id="p3" style="text-align: center; border: green solid 1px;">paragraph</p>
 <div id="p4">div</div>
-<ul id="list1"><il id="listItem1">listItem</li></ul>
+<ul id="list1"><li id="listItem1">listItem</li></ul>
 <script>
 	var p1 = document.getElementById('p1');
 	var p2 = document.getElementById('p2');
