Added background image tests #19

--- a/Testing/html_testing/stylesheet/backgrounds/background-image/background-image-004.html
+++ b/Testing/html_testing/stylesheet/backgrounds/background-image/background-image-004.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-    background-image: url("images/bgdesert.gif");
+    background-image: url("support/bgdesert.gif");
 }
 </style>
 </head>
