--- a/Testing/html_testing/stylesheet/backgrounds/background-image/background-image-005.html
+++ b/Testing/html_testing/stylesheet/backgrounds/background-image/background-image-005.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-    background-image: url("images/paper.gif");
+    background-image: url("support/paper.gif");
 }
 </style>
 </head>
