Moved font logic in new package org.loboevolution.font. Updated FontKey class. Updated font.html test.

--- a/Testing/html_testing/stylesheet/font/font.html
+++ b/Testing/html_testing/stylesheet/font/font.html
@@ -2,20 +2,90 @@
 <html>
 <head>
 <style>
-p.serif {
-    font-family: "Times New Roman", Times, serif;
+p.a {
+    font-family: Comic Sans MS, cursive, sans-serif;
 }
 
-p.sansserif {
+p.b {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+p.c {
+    font-family: Arial Black, Gadget, sans-serif;
+} 	
+
+p.d {
+    font-family:Impact, Charcoal, sans-serif;
+} 	
+
+p.e {
+    font-family:Lucida Sans Unicode, Lucida Grande, sans-serif;
+}
+
+p.f {
+    font-family:Tahoma, Geneva, sans-serif;
+}
+
+p.g {
+    font-family:Trebuchet MS, Helvetica, sans-serif;
+}
+
+p.h {
+    font-family:Verdana, Geneva, sans-serif;
+}
+
+p.i {
+    font-family:Times New Roman, Times, serif;
+}
+
+p.i {
+    font-family:Times New Roman, Times, serif;
+}
+
+p.j {
+    font-family: Palatino Linotype, Book Antiqua, Palatino, serif;
+}
+
+p.k {
+    font-family: Georgia, serif;
+}
+
+p.l {
+    font-family: Courier New, Courier, monospace;
+}
+
+p.m {
+    font-family: Lucida Console, Monaco, monospace;
+}
+
 </style>
 </head>
 <body>
 
-<h1>CSS font-family</h1>
-<p class="serif">This is a paragraph, shown in the Times New Roman font.</p>
-<p class="sansserif">This is a paragraph, shown in the Arial font.</p>
+<p class="a">This is a paragraph, shown in the Comic Sans MS font.</p>
 
+<p class="b">This is a paragraph, shown in the Arial font.</p>
+
+<p class="c">This is a paragraph, shown in the Arial Black font.</p>
+
+<p class="d">This is a paragraph, shown in the Impact font.</p>
+
+<p class="e">This is a paragraph, shown in the Lucida Sans Unicode font.</p>
+
+<p class="f">This is a paragraph, shown in the Tahoma font.</p>
+
+<p class="g">This is a paragraph, shown in the Trebuchet MS font.</p>
+
+<p class="h">This is a paragraph, shown in the Verdana font.</p>
+
+<p class="i">This is a paragraph, shown in the Times New Roman font.</p>
+
+<p class="j">This is a paragraph, shown in the Palatino Linotype font.</p>
+
+<p class="k">This is a paragraph, shown in the Georgia font.</p>
+
+<p class="l">This is a paragraph, shown in the Courier New font.</p>
+
+<p class="m">This is a paragraph, shown in the Lucida Console font.</p>
 </body>
 </html>
