--- a/LoboUnitTest/src/test/resources/org/lobo/html/htmlsample.html
+++ b/LoboUnitTest/src/test/resources/org/lobo/html/htmlsample.html
@@ -3,11 +3,11 @@
 <head>
 <title>Example HTML file</title>
 <meta name="referrer" content="same-origin"/>
-<link href="http://www.example.com/css/common.css" rel="stylesheet" type="text/css" referrerpolicy="strict-origin" />
-<link href="http://www.example.com/css/alter1.css" rel="alternate stylesheet" type="text/css" title="Alter 1" />
-<link href="http://www.example.com/css/alter2.css" rel="alternate stylesheet" type="text/css" title="Alter 2" />
-<link href="http://www.example.com/css/default.css" rel="stylesheet" type="text/css" title="Default" />
-<link href="http://www.example.com/media/print.css" rel="stylesheet" media="print" type="text/css" />
+<link href="common.css" rel="stylesheet" type="text/css" referrerpolicy="strict-origin" />
+<link href="css/alter1.css" rel="alternate stylesheet" type="text/css" title="Alter 1" />
+<link href="css/alter2.css" rel="alternate stylesheet" type="text/css" title="Alter 2" />
+<link href="css/default.css" rel="stylesheet" type="text/css" title="Default" />
+<link href="media/print.css" rel="stylesheet" media="print" type="text/css" />
 <style type="text/css">
 body {
 font-family: Arial, Helvetica;
@@ -54,7 +54,7 @@ p.smallitalic {font-size: small; font-style: italic; margin-left: 2%;}
 #cell12 {padding:4pt 6pt;margin-left:5pt;}
 ul, ol {margin-top: 1em; margin-bottom: 2em;}
 li {margin-top: 1em; margin-bottom: 1em;}
-div.test1 {margin-top: 2em; margin-bottom: 3em; background-position: 20% 0%; padding-left: calc((10% - 3em) - max(6px, 1em)); }
+div.test1 {margin-top: 2em; margin-bottom: 3em; background-position: 20% 0%; padding-left: calc((10% - 3em)); }
 </style>
 <base href="http://www.example.com/" />
 </head>
@@ -75,7 +75,7 @@ div.test1 {margin-top: 2em; margin-bottom: 3em; background-position: 20% 0%; pad
 <tr><td>Cell</td><td>Cell</td><td><img id="fooimg" src="foo.png" alt="Foo image" height="180" width="200"/></td></tr>
 </table>
 <h3 id="firstH3" style="font-family: 'Does Not Exist', Neither; color: navy">Header 3</h3>
-<div id="div1" class="test1" data-foo="bar" data-bar="foo">
+<div id="div1" class="test1">
 <p id="listpara" style="font-family: 'Does Not Exist', Neither, Helvetica; padding-left: inherit">Now, a <nonexistenttag>list</nonexistenttag>:</p>
 <ul id="ul1">
 <li ID="ul1li1" class="liclass" STYLE="color: blue">List item 1</li>
@@ -87,7 +87,7 @@ div.test1 {margin-top: 2em; margin-bottom: 3em; background-position: 20% 0%; pad
 </ul>
 <form id="loginform1" action="/servlet/login1">
 <label for="name">Username:</label>
-<input type="text" id="username" name="Username" data-default-user="foo_user" value="foo_user"/>
+<input type="text" id="username" name="Username" value="foo_user"/>
 <label for="passwd">Password:</label>
 <input type="text" id="passwd" name="Password"/>
 <button type="submit">Login</button>
