Improvved MediaQuery support

--- a/LoboUnitTest/src/test/resources/org/lobo/html/htmlsample.html
+++ b/LoboUnitTest/src/test/resources/org/lobo/html/htmlsample.html
@@ -3,11 +3,11 @@
 <head>
 <title>Example HTML file</title>
 <meta name="referrer" content="same-origin"/>
-<link href="common.css" rel="stylesheet" type="text/css" referrerpolicy="strict-origin" />
-<link href="css/alter1.css" rel="alternate stylesheet" type="text/css" title="Alter 1" />
-<link href="css/alter2.css" rel="alternate stylesheet" type="text/css" title="Alter 2" />
-<link href="css/default.css" rel="stylesheet" type="text/css" title="Default" />
-<link href="media/print.css" rel="stylesheet" media="print" type="text/css" />
+<link href="../css/common.css" rel="stylesheet" type="text/css" referrerpolicy="strict-origin" />
+<link href="../css/alter1.css" rel="alternate stylesheet" type="text/css" title="Alter 1" />
+<link href="../css/alter2.css" rel="alternate stylesheet" type="text/css" title="Alter 2" />
+<link href="../css/default.css" rel="stylesheet" type="text/css" title="Default" />
+<link href="../css/print.css" rel="stylesheet" media="print" type="text/css" />
 <style type="text/css">
 body {
 font-family: Arial, Helvetica;
